# eeg-robotic-arm

./: .gitignore  LICENSE  README.md  requirements.txt  test_integration.py  test_keyboard_integration.py
bridge/arm_node/: package.xml  setup.py
bridge/arm_node/arm_node/: arm_bridge.py  joint_state_publisher.py  joint_state_publisher_fixed.py
bridge/arm_node/launch/: arm_bridge.launch.py
configs/: project_config.yaml
data/logs/: commands_20250920.txt
docs/: arm_simulation.md  env_setup.md  mock_serial.md  ros2_bridge.md  week1_log.md  week2_log.md
docs/images/: README.md
robot/: arm_driver.py  arm_integration_demo.py  quick_verification.py  test_arm_driver.py  test_pybullet_arm.py
robot/ros2_ws/: setup_ros2_sim.sh
robot/ros2_ws/src/arm_sim/: package.xml  setup.py  setup.py.bak
robot/ros2_ws/src/arm_sim/arm_sim/: ascii_visualizer.py  keyboard_control.py  pybullet_sim.py  test_node.py
robot/urdf/: simple_arm.urdf
ros2_ws/src/arm_node/: package.xml  setup.cfg  setup.py
scripts/: log_commands.py  run_sim_arm.py  setup_environment.sh  setup_workspace.sh
sim/: arm_sim.py  keyboard_control.py  mock_serial.py  quick_test.py  test_mock_serial.py
