<?xml version="1.0"?>
<package format="3">
  <name>arm_node</name>
  <version>1.0.0</version>
  <description>ROS2 bridge for EEG robotic arm</description>
  <maintainer email="test@example.com">Developer</maintainer>
  <license>MIT</license>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
